# Velo

./: .gitignore  Cargo.toml  README.md  gen-icon.cjs  package-lock.json  package.json  tsconfig.json
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
crates/velo-app/: Cargo.toml  tauri.conf.json
crates/velo-app/capabilities/: default.json
crates/velo-app/icons/: icon.icns
crates/velo-app/src/: auth.rs  lib.rs  main.rs
crates/velo-core/: Cargo.toml
supabase/: migration.sql
