[package]
name = "velo-app"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "velo_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
velo-core = { path = "../velo-core" }
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
dotenvy = "0.15"

[build-dependencies]
tauri-build = { version = "2", features = [] }
