[package]
name = "velo-app"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "velo_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
velo-core = { path = "../velo-core" }
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
dotenvy = "0.15"
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"
open = "5"
dirs = "6"
tokio = { version = "1", features = ["net", "io-util", "time"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }
